--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 html {
     background-color: #dcf6fc;
     font-family: 'Poppins', sans-serif;
+    font: white;
 }
 
 /* navbar */
@@ -10,7 +11,6 @@ header ul {
     padding: 0;
     overflow: hidden;
     background-color: #333;
-    position: sticky;
     top: 0;
     width: 100%;
   }
@@ -33,9 +33,7 @@ header ul {
     background-color: #111;
   }
 
-  .active {
-    background-color: #4CAF50;
-  }
+
 
 
   @media screen and (max-width: 600px) {
@@ -82,6 +80,7 @@ strong {
 .subjects {
     display: flex;
     max-width: 50%;
+    justify-content: center;
     margin: 1.5rem auto;
     font-weight: 600;
 }
@@ -281,3 +280,31 @@ legend {
 }
 
 
+@media (max-width: 900px) {
+  .subjects {
+    max-width: 100%;
+    justify-content: center;
+    margin: 1.5rem auto;
+    font-weight: 600;
+}
+
+.subjects__left {
+  width: 50%;
+
+}
+
+.subjects__right {
+  width: 50%;
+
+}
+
+body {
+  max-width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  line-height: 1.5rem;
+  text-align: justify;
+}
+
+}
